--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@clerk/nextjs": "^5.3.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.43.0",
     "@tanstack/react-query": "^5.33.0",
     "@unit-finance/unit-node-sdk": "^1.3.5",
